--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#doctors" class="header-menu-link">Врачи</a>
           </li>
           <li class="header-menu-item">
-            <a href="#works" class="header-menu-link">Наши работы</a>
+            <a href="/works.html" class="header-menu-link">Наши работы</a>
           </li>
           <li class="header-menu-item">
             <a href="#contacts" class="header-menu-link">Контакты</a>
@@ -206,7 +206,7 @@
       <!--Секция "Наши работы"-->
       <section class="our-works">
         <div class="our-works-title">
-          <h2 id="works" class="our-works-title-text">Наши работы</h2>
+          <h2 class="our-works-title-text">Наши работы</h2>
           <p class="item">До/После</p>
         </div>
         <div class="our-works container">
