registration-and-login-pages-added

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <a href="#services" class="header-menu-link">Услуги</a>
           </li>
           <li class="header-menu-item">
-            <a href="#doctors" class="header-menu-link">Врачи</a>
+            <a href="#specialists" class="header-menu-link">Врачи</a>
           </li>
           <li class="header-menu-item">
             <a href="#works" class="header-menu-link">Наши работы</a>
@@ -36,7 +36,7 @@
         </ul>
       </nav>
       <div class="header-action">
-        <button class="login">Вход/Регистрация</button>
+        <button class="login"><a href="./login.html">Вход/Регистрация</a></button>
       </div>
     </header>
     <main>
@@ -233,11 +233,10 @@
               Ортодонт успешно провел коррекцию прикуса с помощью металлических брекетов, обеспечен не только эстетичный результат, но и улучшение зубочелюстной системы.
             </p>
           </div>
-          
         </div>
-
       </section>
-      <section class="specialists-section">
+      <!--Специалисты-->
+      <section id="specialists" class="specialists-section">
           <h2 class="doctors-title">Наши специалисты</h2>
           <div class="specialists">
             <div class="flip-card">
