--- a/index.html
+++ b/index.html
@@ -212,8 +212,8 @@
 
         <div class="slider-text-block">
           <div class="slider-container">
-            <img src="img/foto_zubov_krishtianu_ronaldu_do_i_posle_breketov 2.png" id="before" alt="До">
-            <img src="img/foto_zubov_krishtianu_ronaldu_do_i_posle_breketov 1.png" id="after" alt="После">
+            <img src="img/viniry-do.png" id="before" alt="До">
+            <img src="img/viniry-posle.png" id="after" alt="После">
 
             <div class="slider-handle">
               <div class="arrows">
@@ -222,16 +222,23 @@
               </div>
             </div>
 
-            <div class="slider-text after-text">До</div>
-            <div class="slider-text before-text">После</div>
+            <div class="slider-text after-text"></div>
+            <div class="slider-text before-text"></div>
 
           </div>
 
           <div class="our-works-text">
-            <h3>Металические брекеты</h3>
+            <h4>Виниры без брекетов</h4>
             <p class="description">
-              Ортодонт успешно провел коррекцию прикуса с помощью металлических брекетов, обеспечен не только эстетичный результат, но и улучшение зубочелюстной системы.
+              При диагностике не было обнаружено серьезных проблем с прикусом, поэтому керамические виниры были установлены без ортодонтической подготовки. Также была проведена коррекция десневого контура для более привлекательного внешнего вида.
             </p>
+            <div class="footer-our-works">
+              <p class="our-works-text-name">Артём Ефремов</p>
+              <p class="our-works-text-doctor">· ортодонт</p>
+            </div>
+            <div class="our-works-button-wrapper">
+              <a href="#works" class="our-works-button">Смотреть работы →</a>
+            </div>
           </div>
         </div>
       </section>
