--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <a href="#specialists" class="header-menu-link">Врачи</a>
           </li>
           <li class="header-menu-item">
-            <a href="#works" class="header-menu-link">Наши работы</a>
+            <a href="works.html" class="header-menu-link">Наши работы</a>
           </li>
           <li class="header-menu-item">
             <a href="#contacts" class="header-menu-link">Контакты</a>
@@ -237,7 +237,7 @@
               <p class="our-works-text-doctor">· ортодонт</p>
             </div>
             <div class="our-works-button-wrapper">
-              <a href="#works" class="our-works-button">Смотреть работы →</a>
+              <a href="works.html" class="record">Смотреть работы →</a>
             </div>
           </div>
         </div>
