--- a/works.html
+++ b/works.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>CrystalDent</title>
     <link rel="icon" type="image/png" href="img/teeth.png" />
-    <link rel="stylesheet" href="main.css" />
     <link rel="stylesheet" href="works.css" />
   </head>
   <body>
@@ -47,68 +46,130 @@
       <div class="cards">
         <!-- Карточка 1 -->
         <div class="card">
-          <img
-            src="img/foto_zubov_krishtianu_ronaldu_do_i_posle_breketov 2.png"
-            alt="Металлические брекеты"
-          />
-          <h3>Металлические брекеты</h3>
-          <p>
-            Ортодонт успешно провел коррекцию прикуса с помощью металлических
-            брекетов, обеспечив не только эстетичный результат, но и улучшение
-            зубочелюстной системы.
-          </p>
-          <div class="card-footer">
-            <span>Артём Ефремов – ортодонт</span>
-            <a href="#">Подробнее о докторе</a>
+          <div class="card-inner">
+            <div class="card-front">
+              <img
+                src="img/foto_zubov_krishtianu_ronaldu_do_i_posle_breketov 2.png"
+                alt="Металические брекеты"
+              />
+              <h3>Металические брекеты</h3>
+              <p>
+                Ортодонт успешно провел коррекцию прикуса с помощью
+                металлических брекетов, обеспечен не только эстетичный
+                результат, но и улучшение зубочелюстной системы.
+              </p>
+              <div class="card-footer">
+                <span>Артём Ефремов</span>
+                <a href="#" class="flip-btn">Подробнее о докторе</a>
+              </div>
+            </div>
+            <div class="card-back">
+              <h4>Артём Ефремов · ортодонт</h4>
+              <img src="img/artem.png" />
+              <p>
+                Исправление прикуса, брекет-системы. Эстетика и здоровье зубов —
+                его приоритет.
+              </p>
+            </div>
           </div>
         </div>
 
         <!-- Карточка 2 -->
         <div class="card">
-          <div class="card-front">
-            <img src="img/viniry2.png" alt="Керамические виниры" />
-            <h3>Керамические виниры</h3>
-            <p>
-              Пример эстетической реабилитации пациента с помощью 10
-              керамических виниров раствора Emax 3DSmile. Виниры из керамики с
-              повышенной эстетикой выглядят, как красивые природные зубы.
-            </p>
-            <div class="card-footer">
-              <span>Мария Сидорова – стоматолог</span>
-              <a href="#">Подробнее о докторе</a>
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="img/viniry2.png" alt="Керамические виниры" />
+              <h3>Керамические виниры</h3>
+              <p>
+                Пример эстетической реабилитации пациента с помощью 10
+                керамических виниров раствора Emax 3DSmile. Виниры из керамики с
+                повышенной эстетикой выглядят, как красивые природные зубы.
+              </p>
+              <div class="card-footer">
+                <span>Мария Сидорова</span>
+                <a href="#" class="flip-btn">Подробнее о докторе</a>
+              </div>
+            </div>
+            <div class="card-back">
+              <h4>Мария Сидорова · стоматолог</h4>
+              <img src="img/maria.png" />
+              <p>
+                Общий приём. Современные методы лечения и бережный подход к
+                каждому пациенту.
+              </p>
             </div>
           </div>
         </div>
 
         <!-- Карточка 3 -->
         <div class="card">
-          <img src="img/skol3.png" alt="Реставрация скола" />
-          <h3>Реставрация скола</h3>
-          <p>
-            Доктор полностью удалила старые реставрации и заново восстановила
-            структуру зуба с помощью светоотверждаемых материалов.
-          </p>
-          <div class="card-footer">
-            <span>Артём Ефремов – ортодонт</span>
-            <a href="#">Подробнее о докторе</a>
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="img/skol3.png" alt="Реставрация скола" />
+              <h3>Реставрация скола</h3>
+              <p>
+                Доктор полностью удалил старые реставрации и заново восстановил
+                структуру зуба с помощью светоотверждаемых материалов.
+              </p>
+              <div class="card-footer">
+                <span>Максим Новиков</span>
+                <a href="#" class="flip-btn">Подробнее о докторе</a>
+              </div>
+            </div>
+            <div class="card-back">
+              <h4>Максим Новиков · хирург</h4>
+              <img src="img/maksim.png" />
+              <p>
+                Специалист по хирургии с 10-летним стажем. Выполнил более 500
+                успешных операций.
+              </p>
+            </div>
           </div>
         </div>
 
         <!-- Карточка 4 -->
         <div class="card">
-          <img src="img/viniry-posle.png" alt="Виниры без брекетов" />
-          <h3>Виниры без брекетов</h3>
-          <p>
-            Не было обнаружено серьезных проблем с прикусом, поэтому пациенту
-            установили виниры без ортодонтической подготовки. Такие виниры
-            придают зубам более привлекательный внешний вид.
-          </p>
-          <div class="card-footer">
-            <span>Мария Сидорова – стоматолог</span>
-            <a href="#">Подробнее о докторе</a>
+          <div class="card-inner">
+            <div class="card-front">
+              <img src="img/viniry-posle.png" alt="Виниры без брекетов" />
+              <h3>Виниры без брекетов</h3>
+              <p>
+                При диагностике не было обнаружено серьезных проблем с прикусом,
+                поэтому керамические виниры были установлены без ортодонтической
+                подготовки. Также была проведена коррекция десневого контура для
+                более привлекательного внешнего вида.
+              </p>
+              <div class="card-footer">
+                <span>Ирина Гришина</span>
+                <a href="#" class="flip-btn">Подробнее о докторе</a>
+              </div>
+            </div>
+            <div class="card-back">
+              <h4>Ирина Гришина · детский стоматолог</h4>
+              <img src="img/ira.png" />
+              <p>
+                Легко находит подход к детям. Профилактика и лечение с заботой и
+                вниманием.
+              </p>
+            </div>
           </div>
         </div>
       </div>
     </main>
+    <script>
+      document.querySelectorAll(".flip-btn").forEach((button) => {
+        button.addEventListener("click", (e) => {
+          e.preventDefault();
+          const card = button.closest(".card");
+          card.classList.add("flipped");
+        });
+      });
+
+      document.querySelectorAll(".card").forEach((card) => {
+        card.addEventListener("mouseleave", () => {
+          card.classList.remove("flipped");
+        });
+      });
+    </script>
   </body>
 </html>
